--- a/config/database.yml
+++ b/config/database.yml
@@ -50,5 +50,6 @@ test:
 production:
   <<: *default
   database: furima_31966_production
-  username: furima_31966
+  username: root
   password: <%= ENV['FURIMA_31966_DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
