--- a/config/database.yml
+++ b/config/database.yml
@@ -50,6 +50,5 @@ test:
 production:
   <<: *default
   database: furima_31966_production
-  username: root
+  username: furima_31966
   password: <%= ENV['FURIMA_31966_DATABASE_PASSWORD'] %>
-  socket: /var/lib/mysql/mysql.sock
