--- a/config/database.yml
+++ b/config/database.yml
@@ -51,5 +51,5 @@ production:
   <<: *default
   database: furima_31966_production
   username: root
-  password: <%= ENV['FURIMA_31966_DATABASE_PASSWORD'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
